Aplicando melhorias na estrutura do currículo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="col-xl-9 col-lg-8 col-md-6 col-sm-12"> 
           <h1><b>Paulo Alves</b></h1>
-          <h3>Desenvolvedor Web</h3>
+          <h3>Desenvolvedor Full-Stack</h3>
           <hr>
           <h4>Sobre mim</h4>
           <p>
@@ -28,7 +28,7 @@
           </p>
           <h4>Objetivo</h4>
           <p>
-            Busco oportunidade para atuar como Desenvolvedor Web em um ambiente colaborativo e
+            Busco oportunidade para atuar como desenvolvedor web em um ambiente colaborativo e
             desafiador, onde eu possa aplicar de forma transparente e responsável as minhas habilidades.
           </p>
         </div>
@@ -88,13 +88,19 @@
           </div>
           <div class="bloco-habilidades">            
             <div>
-                <label>HTML5/CSS3</label>
+                <label>Tecnologias Web</label>
             </div>
             <div>
                 <label>JavaScript</label>
             </div>
             <div>
-                <label>.NET Core/ASP.NET</label>
+              <label>TypeScript</label>
+            </div>
+            <div>
+              <label>Angular/Vue.Js</label>
+            </div>
+            <div>
+                <label>.NET</label>
             </div>
             <div>
                 <label>C#</label>
@@ -109,13 +115,16 @@
                 <label>Git</label>
             </div>
             <div>
-                <label>Scrum/Kanban</label>
+              <label>Docker</label>
             </div>
             <div>
-                <label>Docker</label>
+                <label>Azure DevOps</label>
             </div>
             <div>
-                <label>Azure</label>
+                <label>Salesforce</label>
+            </div>
+            <div>
+              <label>Metodologias Ágeis</label>
             </div>            
           </div>
           <!-- IDIOMAS -->
@@ -144,24 +153,26 @@
                 Experiência Profissional
               </label>
             </div>
-            <h4 class="titulo-experiencia">Desenvolvedor Full Stack</h4>
+            <h4 class="titulo-experiencia">Desenvolvedor Full-Stack</h4>
             <h6 class="titulo-empresa">Agrotools Gestão e Monitoramento Geo-Espacial de Riscos S.A (Agosto 2021 á Junho 2023)</h6>
             <p>
-              Trabalhava com a criação de novos projetos e sustentação de aplicações web voltadas ao agronegócio utilizando as tecnologias 
-              .NET Framework, ASP.NET Core, C#, tecnologias de desenvolvimento web HTML, CSS e JavaScript, Ajax, JQuery. Vue.js,
-              PostgreSQL e Metodologias Ágeis como Scrum e Kanban.  
+              - Trabalhava na sustentação de projetos legados e na criação de novas aplicações voltadas ao agronegócio.<br> 
+              - Realizava com frequência as correções de scrips em bancos de dados relacionais.<br> 
+              - Aplicava refatoração de código, migração de projetos com boas práticas e desenvolvimento ágil. 
             </p>
             <h4 class="titulo-experiencia">Analista de Desenvolvimento Júnior</h4>
             <h6 class="titulo-empresa">Banco Carrefour e Soluções Financeiras S/A (Outubro 2020 á Abril 2021)</h6>
             <p>
-              Fazia parte de um programa temporário para novos desenvolvedores em um projeto de aquisição para novos clientes utilizando as tecnologias 
-              ASP.NET Core, C#, Angular, SQL Server, NUnit, Docker e Metodologias Ágeis como Scrum e Kanban. 
+              - Participou de projetos para adesão de clientes atuando no desenvolvimento de funcionalidades em aplicações web.<br>
+              - Fazia uso de boas práticas como organização de projetos, qualidade de código e testes de unidade.<br> 
+              - Tinha participação em conjunto o time nas cerimônias de cultura ágil.
             </p>
             <h4 class="titulo-experiencia">Analista de Sistemas Júnior</h4>
             <h6 class="titulo-empresa">Accenture do Brasil LTDA (Dezembro 2018 á Julho 2019)</h6>
             <p>
-              Atuava com desenvolvimento de aplicações em nuvem no ecossistema do CRM Salesforce,
-              usando a linguagem Apex no backend, o Framework Lightning Components e tecnologias de desenvolvimento web HTML, CSS, JavaScript e Metodologias Ágeis como Scrum e Kanban.
+              - Atuava com o CRM Salesforce e seu ecossistema na análise de requisitos, criação e manutenção de recursos.<br>
+              - Utilizava metodologias ágeis na execução de atividades.<br>
+              - Participava de treinamentos internos e aprendizado com analistas plenos.<br>
             </p>
           </div>
           <hr>
