--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
               <label>TypeScript</label>
             </div>
             <div>
-              <label>Angular/Vue.Js</label>
+              <label>Angular</label>
+            </div>
+            <div>
+              <label>Vue.Js</label>
             </div>
             <div>
                 <label>.NET</label>
@@ -157,8 +160,8 @@
             <h6 class="titulo-empresa">Agrotools Gestão e Monitoramento Geo-Espacial de Riscos S.A (Agosto 2021 á Junho 2023)</h6>
             <p>
               - Trabalhava na sustentação de projetos legados e na criação de novas aplicações voltadas ao agronegócio.<br> 
-              - Realizava com frequência as correções de scrips em bancos de dados relacionais.<br> 
-              - Aplicava refatoração de código, migração de projetos com boas práticas e desenvolvimento ágil. 
+              - Realizava com frequência as correções de scripts em bancos de dados relacionais.<br> 
+              - Aplicava correções de códigos, migração de projetos com boas práticas e desenvolvimento ágil. 
             </p>
             <h4 class="titulo-experiencia">Analista de Desenvolvimento Júnior</h4>
             <h6 class="titulo-empresa">Banco Carrefour e Soluções Financeiras S/A (Outubro 2020 á Abril 2021)</h6>
