Removendo pretensão salarial

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             Busco oportunidade para atuar como desenvolvedor web em um ambiente colaborativo e
             desafiador, onde eu possa aplicar de forma transparente e responsável as minhas habilidades.
           </p>
-          <p><span><b>Pretensão salarial</b></span>: R$ 3,000.00</p>
+          <!-- <p><span><b>Pretensão salarial</b></span>: R$ 3,000.00</p> -->
         </div>
       </section>
     </div>
