feat: adiciona novas descrições

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <hr>
           <h4>Sobre mim</h4>
           <p>
-            Brasileiro, solteiro, 43 anos, natural de Recife-PE.
+            Brasileiro, solteiro, 44 anos, natural de Recife-PE.
           </p>
           <h4>Objetivo</h4>
           <p>
@@ -73,12 +73,12 @@
                 www.github.com/PauloAlves8039
               </a>
             </p>
-            <p>
+            <!-- <p>
               <i class="fa fa-twitter icone-contatos" aria-hidden="true"></i>
               <a href="https://twitter.com/PauloJunior788" target="_blank" class="itens-contatos">
                 www.twitter.com/PauloJunior788
               </a>
-            </p>
+            </p> -->
           </div>
           <!-- HABILIDADES -->
           <div class="habilidades">
@@ -89,7 +89,10 @@
           </div>
           <div class="bloco-habilidades">            
             <div>
-                <label>Tecnologias Web</label>
+                <label>HTML</label>
+            </div>
+            <div>
+                <label>CSS</label>
             </div>
             <div>
                 <label>JavaScript</label>
@@ -101,7 +104,7 @@
               <label>Angular</label>
             </div>
             <div>
-              <label>Vue.Js</label>
+              <label>React</label>
             </div>
             <div>
                 <label>.NET</label>
@@ -122,7 +125,13 @@
               <label>Docker</label>
             </div>
             <div>
+                <label>Azure</label>
+            </div>
+            <div>
                 <label>Azure DevOps</label>
+            </div>
+            <div>
+                <label>IA Generativa</label>
             </div>
             <div>
                 <label>Salesforce</label>
@@ -157,6 +166,13 @@
                 Experiência Profissional
               </label>
             </div>
+            <h4 class="titulo-experiencia">Desenvolvedor Full-Stack</h4>
+            <h6 class="titulo-empresa">Atos Brasil LTDA. (Abril 2024 - Aberto)</h6>
+            <p>
+              - Atuava no desenvolvimento de projeto interno para o programa Bootcamper.<br> 
+              - Realizava cobertura de férias de outros colaborades em projetos diversos para um cliente corporativo.<br> 
+              - Aplicava correções de códigos, criação de novas funcionalidades com boas práticas no desenvolvimento ágil. 
+            </p>
             <h4 class="titulo-experiencia">Desenvolvedor Full-Stack</h4>
             <h6 class="titulo-empresa">Agrotools Gestão e Monitoramento Geo-Espacial de Riscos S.A (Agosto 2021 á Junho 2023)</h6>
             <p>
@@ -198,9 +214,9 @@
                 Capacitação
               </label>
             </div>
-            <p>Formação Arquiteto de Software - Desenvolvedor.io (Agosto 2022)</p>
-            <p>Bootcamp Desenvolvedor Full-Stack - Digital Innovation One (Julho 2020)</p>
-            <p>Formação Analista de Banco de Dados Júnior - TreinaWeb (Agosto 2020)</p>            
+            <p>IA: Eleve sua produtividade e acelere sua carreira (Conquer Business School 2024)</p>
+            <p>Academia .NET 6 (UFN 2023)</p> 
+            <p>Formação Arquiteto de Software - Desenvolvedor.io (Agosto 2022)</p>       
           </div>
         </section>
       </div>
