feat: atualiza curriculo

--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
               <label>React</label>
             </div>
             <div>
+              <label>Vue.js</label>
+            </div>
+            <div>
                 <label>.NET</label>
             </div>
             <div>
@@ -170,7 +173,7 @@
             <h6 class="titulo-empresa">Atos Brasil LTDA. (Abril 2024 - Aberto)</h6>
             <p>
               - Atuava no desenvolvimento de projeto interno para o programa Bootcamper.<br> 
-              - Realizava cobertura de férias de outros colaborades em projetos diversos para um cliente corporativo.<br> 
+              - Realizava cobertura de férias de outros colaboradores em projetos diversos para um cliente corporativo.<br> 
               - Aplicava correções de códigos, criação de novas funcionalidades com boas práticas no desenvolvimento ágil. 
             </p>
             <h4 class="titulo-experiencia">Desenvolvedor Full-Stack</h4>
