feat: adiciona informações

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="col-xl-9 col-lg-8 col-md-6 col-sm-12"> 
           <h1><b>Paulo Alves</b></h1>
-          <h3>Desenvolvedor Full-Stack</h3>
+          <h3>Desenvolvedor Web</h3>
           <hr>
           <h4>Sobre mim</h4>
           <p>
@@ -28,7 +28,7 @@
           </p>
           <h4>Objetivo</h4>
           <p>
-            Busco oportunidade para atuar como desenvolvedor web em um ambiente colaborativo e
+            Busco oportunidade para atuar como desenvolvedor de aplicações web em um ambiente colaborativo e
             desafiador, onde eu possa aplicar de forma transparente e responsável as minhas habilidades.
           </p>
           <!-- <p><span><b>Pretensão salarial</b></span>: R$ 3,000.00</p> -->
@@ -169,14 +169,14 @@
                 Experiência Profissional
               </label>
             </div>
-            <h4 class="titulo-experiencia">Desenvolvedor Full-Stack</h4>
+            <h4 class="titulo-experiencia">Desenvolvedor de aplicativos</h4>
             <h6 class="titulo-empresa">Atos Brasil LTDA. (Abril 2024 - Aberto)</h6>
             <p>
               - Atuava no desenvolvimento de projeto interno para o programa Bootcamper.<br> 
               - Realizava cobertura de férias de outros colaboradores em projetos diversos para um cliente corporativo.<br> 
               - Aplicava correções de códigos, criação de novas funcionalidades com boas práticas no desenvolvimento ágil. 
             </p>
-            <h4 class="titulo-experiencia">Desenvolvedor Full-Stack</h4>
+            <h4 class="titulo-experiencia">Desenvolvedor Web</h4>
             <h6 class="titulo-empresa">Agrotools Gestão e Monitoramento Geo-Espacial de Riscos S.A (Agosto 2021 á Junho 2023)</h6>
             <p>
               - Trabalhava na sustentação de projetos legados e na criação de novas aplicações voltadas ao agronegócio.<br> 
