fix: corrige informações sobre perfil

--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
                 Experiência Profissional
               </label>
             </div>
-            <h4 class="titulo-experiencia">Desenvolvedor de aplicativos</h4>
+            <h4 class="titulo-experiencia">Desenvolvedor Web</h4>
             <h6 class="titulo-empresa">Atos Brasil LTDA. (Abril 2024 - Aberto)</h6>
             <p>
-              - Atuava no desenvolvimento de projeto interno para o programa Bootcamper.<br> 
+              - Atuava no desenvolvimento de projeto interno para o programa Bootcamp.<br> 
               - Realizava cobertura de férias de outros colaboradores em projetos diversos para um cliente corporativo.<br> 
               - Aplicava correções de códigos, criação de novas funcionalidades com boas práticas no desenvolvimento ágil. 
             </p>
@@ -186,7 +186,7 @@
             <h4 class="titulo-experiencia">Analista de Desenvolvimento Júnior</h4>
             <h6 class="titulo-empresa">Banco Carrefour e Soluções Financeiras S/A (Outubro 2020 á Abril 2021)</h6>
             <p>
-              - Participou de projetos para adesão de clientes atuando no desenvolvimento de funcionalidades em aplicações web.<br>
+              - Participou de projetos para adesão de clientes desenvolvendo funcionalidades em aplicações web.<br>
               - Fazia uso de boas práticas como organização de projetos, qualidade de código e testes de unidade.<br> 
               - Tinha participação em conjunto o time nas cerimônias de cultura ágil.
             </p>
